# stitch

./: CMakeLists.txt
.github/workflows/: test.yml
stitch/: events.h  file.h  signal.h  timer.h
stitch/darwin/: events.cpp  events.h  file.cpp  file.h  file_event.cpp  file_event.h  signal.cpp  signal.h  timer.cpp  timer.h  utils.h
tests/: CMakeLists.txt
